--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -621,46 +621,54 @@ label{
     justify-content: center;
     align-content: center;
     margin: 20px 0px;
+    box-shadow: 0px 0px 20px 10px #72cafda8;
     /* animation: sombra 2s infinite ease-out;
     animation: 1.5s linear 0s infinite normal none running jello-horizontal; */
-    animation: sombra 2s infinite ease-out, 1.5s linear 0s infinite normal none running jello-horizontal;
+    //animation: sombra 2s infinite ease-out, 1.5s linear 0s infinite normal none running jello-horizontal;
+    animation: 2s linear 0s infinite normal none running jello-horizontal;
 }
 #contenedorBotonFinal a p{
     text-shadow: 0px 0px 3px black;
     font-size: 37px;
 }
-@keyframes sombra{
+/* @keyframes sombra{
     0%{
         box-shadow: 0px 0px 0px 0px
     }
     50%{
         box-shadow: 0px 0px 20px 10px #48bcff;
     }
-}
+} */
 @keyframes jello-horizontal{
     0%, 100% {
-        -webkit-transform: scale3d(1,1,1);
-        transform: scale3d(1,1,1);
+        /* -webkit-transform: scale3d(1,1,1);
+        transform: scale3d(1,1,1); */
+        transform: scale(1);
     }
     30% {
-        -webkit-transform: scale3d(1.10,.90,1);
-        transform: scale3d(1.10,.90,1);
+        /* -webkit-transform: scale3d(1.10,.90,1);a
+        transform: scale3d(1.10,.90,1); */
+        transform: scaleX(1.10) scaleY(0.9);
     }
     40% {
-        -webkit-transform: scale3d(.90,1.10,1);
-        transform: scale3d(.90,1.10,1);
+        /* -webkit-transform: scale3d(.90,1.10,1);
+        transform: scale3d(.90,1.10,1); */
+        transform: scaleX(0.9) scaleY(1.1);
     }
     50% {
-        -webkit-transform: scale3d(1.15,.85,1);
-        transform: scale3d(1.15,.85,1);
+        /* -webkit-transform: scale3d(1.15,.85,1);
+        transform: scale3d(1.15,.85,1); */
+        transform: scaleX(1.15) scaleY(0.85);
     }
     65% {
-        -webkit-transform: scale3d(.95,1.05,1);
-        transform: scale3d(.95,1.05,1);
+        /* -webkit-transform: scale3d(.95,1.05,1);
+        transform: scale3d(.95,1.05,1); */
+        transform: scaleX(0.95) scaleY(1.05);
     }
     75% {
-        -webkit-transform: scale3d(1.05,.95,1);
-        transform: scale3d(1.05,.95,1);
+        /* -webkit-transform: scale3d(1.05,.95,1);
+        transform: scale3d(1.05,.95,1); */
+        transform: scaleX(1.05) scaleY(0.95);
     }
 }
 
